--- a/temp2.html
+++ b/temp2.html
@@ -2,7 +2,7 @@
 <html>
  <head>
  <title>CFG2019.html</title>
-
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
 .button {
   background-color: #301934; /* Purple */
@@ -22,7 +22,6 @@
 
  <body>
 
- <p> Test page.</p>
  <button class="button" onclick="testScript()"> Press to continue! </button>
 
  </body>
