added a css thing because they told me its good practise

--- a/temp2.html
+++ b/temp2.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
+
+   <link rel = "stylesheet"
+   type = "text/css"
+   href = "myStyle.css" />
+
  <title>CFG2019.html</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <style>
-.button {
-  background-color: #301934; /* Purple */
-  border: none;
-  color: #FFFFFF; /* White */
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-</style>
-
+ 
  </head>
 
 
