finished landing page

--- a/site/index.html
+++ b/site/index.html
@@ -14,22 +14,19 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Glasgow Science Centre</h1>
+						<img src="images/logo.jpeg" alt="" />
 					</header>
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- Introduction -->
 							<section id="intro" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Please indicate if you need any Accessability Features.</h2>
+											<h2><b>Enjoy your visit!</b></h2>
 										</header>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">I need Accessability Features.</a></li>
+											<li><a href="generic.html" class="button">Continue</a></li>
 										</ul>
 									</div>
 								</div>
@@ -37,32 +34,7 @@
 
 
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Learn more about SCIENCE!</h2>
-									<p><b>Science is awsome, checkout these sciency things.</b></p>
-								</header>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-								</footer>
-							</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>We would love some feedback!</h2>
-									<p>You are awsome and so is feedback!</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-									</ul>
-								</footer>
-							</section>
-
-					</div>
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
