added choice html page

--- a/site/index.html
+++ b/site/index.html
@@ -26,14 +26,11 @@
 											<h2><b>Enjoy your visit!</b></h2>
 										</header>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Continue</a></li>
+											<li><a href="choice.html" class="button">Continue</a></li>
 										</ul>
 									</div>
 								</div>
 							</section>
-
-
-
 
 
 		<!-- Scripts -->
