finally made the icons white, woohoo

--- a/site/choice.html
+++ b/site/choice.html
@@ -26,10 +26,10 @@
 											<h2><b>Do you require any Accessability Features?</b></h2>
 										</header>
 										<ul class="actions">
-											<li><a href="yes.html" class="button">Yes</a></li>
+											<li><a href="yes.html" class="buttonyes"><i class="fas fa-thumbs-up" style="color:white;"></i></a></li>
 										</ul>
                     <ul class="actions">
-                      <li><a href="no.html" class="button">No</a></li>
+                      <li><a href="no.html" class="buttonno"><i class="fas fa-thumbs-down" style="color:white;"></i></a></li>
                     </ul>
 									</div>
 								</div>
