--- a/site/choice.html
+++ b/site/choice.html
@@ -29,7 +29,7 @@
 											<li><a href="yes.html" class="buttonyes"><i class="fas fa-thumbs-up" style="color:white;"></i></a></li>
 										</ul>
                     <ul class="actions">
-                      <li><a href="no.html" class="buttonno"><i class="fas fa-thumbs-down" style="color:white;"></i></a></li>
+                      <li><a href="level.html" class="buttonno"><i class="fas fa-thumbs-down" style="color:white;"></i></a></li>
                     </ul>
 									</div>
 								</div>
