--- a/site/QR.html
+++ b/site/QR.html
@@ -11,7 +11,11 @@
 	</head>
   <body>
 
-      <h1>Please scan the QR code.</h1>
+    <header id="header" class="alt">
+      <img src="images/logo.jpeg" alt="" />
+    </header>
+
+      <h1><center>Please scan the QR code.</center></h1>
 
       <video id="preview"></video>
       <script type="text/javascript">
