--- a/site/QR.html
+++ b/site/QR.html
@@ -27,7 +27,7 @@
           if (cameras.length > 0) {
             scanner.start(cameras[0]);
           } else {
-            console.error('No cameras found.');
+            console.error('No camera found.');
           }
         }).catch(function (e) {
           console.error(e);
