--- a/site/levels.html
+++ b/site/levels.html
@@ -23,7 +23,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2><b>Please select your level.</b></h2>
+											<h2><b>Please select your Floor.</b></h2>
 										</header>
 										<ul class="actions">
 											<li><a href="map.html" class="button">G</a></li>
