added another floor

--- a/site/levels.html
+++ b/site/levels.html
@@ -29,6 +29,9 @@
                     <ul class="actions">
 											<li><a href="map.html" class="button">2</a></li>
 										</ul>
+										<ul class="actions">
+											<li><a href="map.html" class="button">3</a></li>
+										</ul>
 									</div>
 								</div>
 							</section>
