--- a/site/yes.html
+++ b/site/yes.html
@@ -58,7 +58,7 @@
 				if(e.target && e.target.id=="hearing"){
 					if(flag === "hearing"){
 						document.getElementById("hearing").style.color = "gray"
-						flag = "default";
+						flag = "default"; // CHANGE THIS
 					}else{
 						document.getElementById("hearing").style.color = "purple"
 						flag = "hearing";
@@ -69,10 +69,10 @@
 				if(e.target && e.target.id=="sight"){
 					if(flag === "sight"){
 						document.getElementById("sight").style.color = "gray"
-						flag = "default";
+						flag = "default"; // CHANGE THIS
 					}else{
 						document.getElementById("sight").style.color = "purple"
-						flag = "sight";
+						flag = "sight";   // CHANGE THIS
 					}
 
 				}
