--- a/site/yes.html
+++ b/site/yes.html
@@ -40,7 +40,8 @@
 									</div>
 								</div>
 							</section>
-
+					</div>
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -52,41 +53,51 @@
 			<script src="assets/js/main.js"></script>
 
 			<script>
-			var flag = "default"; // CHANGE THIS
+			var flagSight = "default";
+			var flagHearing= "default";
+			var flagOther = "default";
 			document.addEventListener('click',function(e){
 
 				if(e.target && e.target.id=="hearing"){
-					if(flag === "hearing"){
+					if(flagHearing === "hearing"){
 						document.getElementById("hearing").style.color = "gray"
-						flag = "default"; // CHANGE THIS
+						flagHearing = "default"; // CHANGE THIS
+						localStorage.setItem('hearing',flagHearing);
 					}else{
 						document.getElementById("hearing").style.color = "purple"
-						flag = "hearing";
+						flagHearing = "hearing";
+						localStorage.setItem('hearing',flagHearing);
 					}
 
 				}
 
 				if(e.target && e.target.id=="sight"){
-					if(flag === "sight"){
+					if(flagSight === "sight"){
 						document.getElementById("sight").style.color = "gray"
-						flag = "default"; // CHANGE THIS
+						flagSight = "default"; // CHANGE THIS
+						localStorage.setItem('sight',flagSight);
 					}else{
 						document.getElementById("sight").style.color = "purple"
-						flag = "sight";   // CHANGE THIS
+						flagSight = "sight";   // CHANGE THIS
+						localStorage.setItem('sight',flagSight);
 					}
 
 				}
 
 				if(e.target && e.target.id=="tempOther"){
-					if(flag === "Other"){
+					if(flagOther === "Other"){
 						document.getElementById("tempOther").style.color = "gray"
-						flag = "default";
+						flagOther = "default";
+						localStorage.setItem('other',flagOther);
+
 					}else{
 						document.getElementById("tempOther").style.color = "purple"
-						flag = "Other";
+						flagOther = "Other";
+						localStorage.setItem('other',flagOther);
 					}
 
 				}
+
 			}) </script>
 
 	</body>
