--- a/site/yes.html
+++ b/site/yes.html
@@ -60,11 +60,11 @@
 
 				if(e.target && e.target.id=="hearing"){
 					if(flagHearing === "hearing"){
-						document.getElementById("hearing").style.color = "gray"
+						document.getElementById("hearing").style.color = "gray";
 						flagHearing = "default"; // CHANGE THIS
 						localStorage.setItem('hearing',flagHearing);
 					}else{
-						document.getElementById("hearing").style.color = "purple"
+						document.getElementById("hearing").style.color = "purple";
 						flagHearing = "hearing";
 						localStorage.setItem('hearing',flagHearing);
 					}
@@ -73,11 +73,11 @@
 
 				if(e.target && e.target.id=="sight"){
 					if(flagSight === "sight"){
-						document.getElementById("sight").style.color = "gray"
+						document.getElementById("sight").style.color = "gray";
 						flagSight = "default"; // CHANGE THIS
 						localStorage.setItem('sight',flagSight);
 					}else{
-						document.getElementById("sight").style.color = "purple"
+						document.getElementById("sight").style.color = "purple";
 						flagSight = "sight";   // CHANGE THIS
 						localStorage.setItem('sight',flagSight);
 					}
@@ -86,12 +86,12 @@
 
 				if(e.target && e.target.id=="tempOther"){
 					if(flagOther === "Other"){
-						document.getElementById("tempOther").style.color = "gray"
+						document.getElementById("tempOther").style.color = "gray";
 						flagOther = "default";
 						localStorage.setItem('other',flagOther);
 
 					}else{
-						document.getElementById("tempOther").style.color = "purple"
+						document.getElementById("tempOther").style.color = "purple";
 						flagOther = "Other";
 						localStorage.setItem('other',flagOther);
 					}
