--- a/site/levels.html
+++ b/site/levels.html
@@ -1,161 +1,58 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title>Glasgow Science Centre</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
+	<head>
+		<title>Glasgow Science Centre</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<div id="wrapper">
-	<nav id="sidebar">
-		<div id="dismiss">
-			<i class="fas fa-arrow-left"></i>
-		</div>
-
-		<div class="sidebar-header">
-			<h3>Bootstrap Sidebar</h3>
-		</div>
-
-		<ul class="list-unstyled components">
-			<p>Dummy Heading</p>
-			<li class="active">
-				<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
-				<ul class="collapse list-unstyled" id="homeSubmenu">
-					<li>
-						<a href="#">Home 1</a>
-					</li>
-					<li>
-						<a href="#">Home 2</a>
-					</li>
-					<li>
-						<a href="#">Home 3</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="#">About</a>
-				<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
-				<ul class="collapse list-unstyled" id="pageSubmenu">
-					<li>
-						<a href="#">Page 1</a>
-					</li>
-					<li>
-						<a href="#">Page 2</a>
-					</li>
-					<li>
-						<a href="#">Page 3</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="#">Portfolio</a>
-			</li>
-			<li>
-				<a href="#">Contact</a>
-			</li>
-		</ul>
-
-		<ul class="list-unstyled CTAs">
-			<li>
-				<a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
-			</li>
-			<li>
-				<a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
-			</li>
-		</ul>
-	</nav>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-
-			<button type="button" id="sidebarCollapse" class="btn btn-info">
-				<i class="fas fa-align-left"></i>
-				<span>Toggle Sidebar</span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Page</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Page</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Page</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Page</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<header id="header" class="alt">
-		<img src="images/logo.jpeg" alt="" />
-	</header>
-	<div id="main">
-		<div id="intro" class="main">
-			<div class="spotlight">
-				<div class="content">
-					<header class="major">
-						<h2><b>Please select your floor.</b></h2>
-					</header>
-					<ul class="actions">
-						<li><a href="map.html" class="button">G</a></li>
-					</ul>
-					<ul class="actions">
-						<li><a href="map.html" class="button">1</a></li>
-					</ul>
-					<ul class="actions">
-						<li><a href="map.html" class="button">2</a></li>
-					</ul>
-					<ul class="actions">
-						<li><a href="map.html" class="button">3</a></li>
-					</ul>
+			<div id="wrapper">
+				<div id="mySidenav" class="sidenav">
+					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+					<a href="#">About</a>
+					<a href="#">Services</a>
+					<a href="#">Clients</a>
+					<a href="#">Contact</a>
 				</div>
+					<header id="header" class="alt">
+						<img src="images/logo.jpeg" alt="" />
+					</header>
+					<div id="main">
+							<section id="intro" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2><b>Please select your floor.</b></h2>
+										</header>
+										<ul class="actions">
+											<li><a href="map.html" class="button">G</a></li>
+										</ul>
+                    <ul class="actions">
+											<li><a href="map.html" class="button">1</a></li>
+										</ul>
+                    <ul class="actions">
+											<li><a href="map.html" class="button">2</a></li>
+										</ul>
+										<ul class="actions">
+											<li><a href="map.html" class="button">3</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+					</div>
 			</div>
-		</div>
-	</div>
-	<div class="overlay"></div>
-</div>
-</section>
 
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-<script type="text/javascript">
-	$(document).ready(function () {
-		$("#sidebar").mCustomScrollbar({
-			theme: "minimal"
-		});
-
-		$('#dismiss, .overlay').on('click', function () {
-			// hide sidebar
-			$('#sidebar').removeClass('active');
-			// hide overlay
-			$('.overlay').removeClass('active');
-		});
-
-		$('#sidebarCollapse').on('click', function () {
-			// open sidebar
-			$('#sidebar').addClass('active');
-			// fade in the overlay
-			$('.overlay').addClass('active');
-			$('.collapse.in').toggleClass('in');
-			$('a[aria-expanded=true]').attr('aria-expanded', 'false');
-		});
-	});
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
-</body>
+	</body>
 </html>
