--- a/site/levels.html
+++ b/site/levels.html
@@ -8,15 +8,21 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+	<div id="titleAndNavi">
+		<div id="controlNav" class="controlNav">
+			<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+		</div>
+		<div id="Title" class="navTile">Levels
+		</div>
+	</div>
 			<div id="wrapper">
+
 				<div id="mySidenav" class="sidenav">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<a href="#">About</a>
-					<a href="#">Services</a>
-					<a href="#">Clients</a>
-					<a href="#">Contact</a>
+
 				</div>
+
 					<header id="header" class="alt">
 						<img src="images/logo.jpeg" alt="" />
 					</header>
@@ -53,6 +59,15 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				function openNav() {
+					document.getElementById("mySidenav").style.width = "30%";
+				}
+
+				function closeNav() {
+					document.getElementById("mySidenav").style.width = "0";
+				}
+			</script>
 
 	</body>
 </html>
