--- a/site/levels.html
+++ b/site/levels.html
@@ -31,7 +31,7 @@
 					</div>
 					<div class="List">
 						<div id="listPic">
-
+							<img src="images/listPic.png" height="100%"/>
 						</div>
 						<div id="listText">
 							List
