--- a/site/levels.html
+++ b/site/levels.html
@@ -21,17 +21,17 @@
 					<div class="exit">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					</div>
-					<div class="qrCode">
+					<div class="qrCode" id="qrCode">
 						<div id="qrPic">
-
+							<img src="images/whiteQR.png" height="60%" width="60%"/>
 						</div>
 						<div id="qrText">
 							QR
 						</div>
 					</div>
-					<div class="List">
+					<div class="List" id="listDiv">
 						<div id="listPic">
-							<img src="images/listPic.png" height="100%"/>
+							<img src="images/whiteList.png" height="100%"/>
 						</div>
 						<div id="listText">
 							List
