--- a/site/levels.html
+++ b/site/levels.html
@@ -21,7 +21,7 @@
 					<div class="exit">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					</div>
-					<div class="qrCode" id="qrCode">
+					<div class="QrCode" id="qrCode">
 						<div id="qrPic">
 							<img src="images/whiteQR.png" height="60%" width="60%"/>
 						</div>
@@ -31,11 +31,20 @@
 					</div>
 					<div class="List" id="listDiv">
 						<div id="listPic">
-							<img src="images/whiteList.png" height="100%"/>
+							<img src="images/whiteList.png" height="60%" width="60%"/>
 						</div>
 						<div id="listText">
 							List
 						</div>
+					</div>
+					<div class="Help" id="helpDiv">
+						<div id="helpPic">
+							<img src="images/whiteHelp.png" height="60%" width="60%"/>
+						</div>
+						<div id="helpText">
+							Help
+						</div>
+
 					</div>
 
 
