--- a/site/exhibit.html
+++ b/site/exhibit.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -16,6 +17,7 @@
 					<header id="header" class="alt">
 						<img src="images/logo.jpeg" alt="" />
 					</header>
+                    <p id = "disabilities"></p>
 
 				<!-- Main -->
 					<div id="main">
@@ -28,7 +30,7 @@
           						<img src="images/demo.jpeg" alt="" /> <!-- CHANGE THIS-->
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                   <h2><b>FURTHER</b></h2>
-                  <p><a href = "https://www.sciencealert.com/13-science-facts-never-learned-high-school-2018"> LINKS </a></p>  <!-- CHANGE THIS-->
+                  <p><a href = "https://www.sciencealert.com/13-science-facts-never-learned-high-school-2018"> Learn More </a></p>  <!-- CHANGE THIS-->
                     <img src="images/demo.jpeg" alt="" /> <!-- CHANGE THIS-->
                   </div>
 								</div>
